# gol-wasm

./: Cargo.toml  index.html  main.js
.github/workflows/: deploy.yaml
src/: lib.rs
