[package]
name = "wasmrs"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.93"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"         # Optimize for size
codegen-units = 1       # Fewer codegen units to enable more optimizations
lto = "fat"             # Link-time optimizations for maximum binary size reduction
panic = "abort"         # Remove panic support to reduce size
